gccida/g2/init_builtins
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_builtins/src/cppinit.c:1182:22: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
void  init_builtins( cpp_reader_0 *pfile) 
                     ^~~~~~~~~~~~
                     cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_builtins/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_builtins/src/cppinit.c:1190:1: error: unknown type name 'cpp_hashnode_0'; did you mean 'cpp_hashnode'?
cpp_hashnode_0 *v7; // rax 
^~~~~~~~~~~~~~
cpp_hashnode
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_builtins/src/cpplib.h:42:29: note: 'cpp_hashnode' declared here
typedef struct cpp_hashnode cpp_hashnode;
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_builtins/src/cppinit.c:1191:1: error: must use 'enum' tag to refer to type 'c_lang'
c_lang lang; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_builtins/src/cppinit.c:1206:39: error: use of undeclared identifier 'unk_65C690'
if ( v3 == ( const  struct builtin *)&unk_65C690 ) 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_builtins/src/cppinit.c:1228:39: error: use of undeclared identifier 'unk_65C690'
if ( v3 != ( const  struct builtin *)&unk_65C690 ) 
                                      ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_builtins/src/obj/cppinit.o] Error 1
